# humanoid_footstep_ik

./: LICENSE  README.md  pyproject.toml
assets/atlas/: left_foot.urdf  right_foot.urdf
humanoid_footstep_ik/: main.py  visualizer.py
notebooks/: visualize_plan.ipynb
scripts/: visualize_plan.py
